--- a/minta/index.html
+++ b/minta/index.html
@@ -44,7 +44,7 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu">
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./index.html"><img src="img/logoor.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <nav class="header__nav">
@@ -160,7 +160,7 @@
                 <div class="col-lg-7">
                     <div class="home__about__pic">
                         <!--img src="img/about/haj.jpg"-->
-                        <div class="home__about__pic__item large-item set-bg" data-setbg="img/about/haj.jpg"></div>
+                        <div class="home__about__pic__item large-item set-bg" data-setbg="img/about/mango.jpg"></div>
                         <!--div class="home__about__pic__item">
                             <div class="home__about__pic__item__inner set-bg" data-setbg="img/about/about-2.jpg"></div>
                             <div class="home__about__pic__item__inner set-bg" data-setbg="img/about/about-3.jpg"></div>
@@ -204,7 +204,7 @@
         <div class="container-fluid">
             <div class="services__list">
                 <div class="row">
-                    <div class="d-flex justify-content-between">
+                    <!--div class="d-flex justify-content-between"-->
                         <div class="col-xl-2 col-md-4 col-sm-3">
                             <div class="services__item">
                                 <img src="img/markak/24-7.png" alt="24/7">
@@ -229,7 +229,7 @@
                                     india!</p>
                             </div>
                         </div>
-                    </div>
+                    <!--/div-->
                     
                 </div>
 
