--- a/minta/index.html
+++ b/minta/index.html
@@ -257,8 +257,7 @@
                         <ul class="footer-address">
                             <li><i class="fa fa-phone"></i> +36-20-123-4567</li>
                             <li><i class="fa fa-envelope"></i> minta@gmail.com</li>
-                            <li><i class="fa fa-location-arrow"></i> 1024, Budapest, Lövőház utca 31 fsz. 1 (Kapucsengő:
-                                1)</li>
+                            <li><i class="fa fa-location-arrow"></i> 3532, Miskolc, Andrássy út 3-5.</li>
                         </ul>
                     </div>
                 </div>
