--- a/minta/kapcsolat.html
+++ b/minta/kapcsolat.html
@@ -138,29 +138,29 @@
                     <div class="contact__widget__item">
                         <span class="icon_phone"></span>
                         <h4>Telefonszám</h4>
-                        <p>+36-20-323-1992</p>
+                        <p>+36-46-744-343</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="contact__widget__item">
                         <span class="icon_pin_alt"></span>
                         <h4>Cím</h4>
-                        <p>1024, Budapest, Lövőház utca 31 fsz. 1 (Kapucsengő: 1)</p>
+                        <p>3532, Miskolc, Andrássy út 3-5.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="contact__widget__item">
                         <span class="icon_clock_alt"></span>
                         <h4>Nyitvatartás</h4>
-                        <p>Kedd - Péntek: 7:00 - 20:00</p>
-                        <p>Szombat: 8:00 - 16:00</p>
+                        <p>Kedd - Péntek: 7:00 - 18:00</p>
+                        <p>Szombat: 8:00 - 12:00</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="contact__widget__item">
                         <span class="icon_mail_alt"></span>
                         <h4>E-Mail</h4>
-                        <p>ginartsalon@gmail.com</p>
+                        <p>balikori@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -181,16 +181,15 @@
     <!-- Map Begin -->
     <div class="map">
         <iframe width="925" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-            src="https://maps.google.com/maps?width=918&amp;height=349&amp;hl=en&amp;q=L%C3%B6v%C5%91h%C3%A1z%20utca%2031%20Budapest+(Elhelyezkedes)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-        <a href='http://maps-generator.com/'>embedded google maps</a>
+            src="https://maps.google.com/maps?width=600&amp;height=480&amp;hl=en&amp;q=miskolc Andrássy út 3-5&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
         <script type='text/javascript'
             src='https://embedmaps.com/google-maps-authorization/script.js?id=0bd7e345a788ad8bf01f5d6c71bee25eac33644b'></script>
         <div class="map-inside">
             <div class="inside-widget">
-                <h5>Budapest</h5>
+                <h5>Miskolc</h5>
                 <ul>
-                    <li>Tel.: +36-20-323-1992</li>
-                    <li>Cím: 1024, Budapest, Lövőház utca 31 fsz. 1 (Kapucsengő: 1)</li>
+                    <li>Cím: 3532, Miskolc, Andrássy út 3-5.</li>
+                    <li>Tel.: +36-46-744-343</li>
                 </ul>
             </div>
         </div>
@@ -205,8 +204,8 @@
                     <div class="footer__about">
                         <img src="img/logo.png" alt="">
                         <ul>
-                            <li><i class="fa fa-clock-o"></i> Kedd - Péntek: 7:00 - 20:00</li>
-                            <li><i class="fa fa-clock-o"></i> Szombat: 8:00 - 16:00</li>
+                            <li><i class="fa fa-clock-o"></i> Kedd - Péntek: 8:00 - 18:00</li>
+                            <li><i class="fa fa-clock-o"></i> Szombat: 8:00 - 12:00</li>
                         </ul>
                     </div>
                 </div>
@@ -214,23 +213,27 @@
                     <div class="footer__widget">
                         <h5>Elérhetőség</h5>
                         <ul class="footer-address">
-                            <li><i class="fa fa-phone"></i> +36-20-323-1992</li>
-                            <li><i class="fa fa-envelope"></i> ginartsalon@gmail.com</li>
-                            <li><i class="fa fa-location-arrow"></i> 1024, Budapest, Lövőház utca 31 fsz. 1 (Kapucsengő:
-                                1)</li>
+                            <li><i class="fa fa-phone"></i> +36-46-744-343</li>
+                            <li><i class="fa fa-envelope"></i> balikori@gmail.com</li>
+                            <li><i class="fa fa-location-arrow"></i> 3532, Miskolc, Andrássy út 3-5.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
+
+
                         <h5>Facebook</h5>
                         <ul>
-                            <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs=""
-                                data-width="300" data-height="200" data-small-header="false"
-                                data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false">
-                                <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
-                                    <a href="https://www.facebook.com/facebook">Facebook</a>
-                                </blockquote>
+                            <div class="fb-page"
+                                data-href="https://www.facebook.com/Mango-Sz%C3%A9ps%C3%A9gszalon-314413545238238/"
+                                data-tabs="" data-width="" data-height="" data-small-header="false"
+                                data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                                <blockquote
+                                    cite="https://www.facebook.com/Mango-Sz%C3%A9ps%C3%A9gszalon-314413545238238/"
+                                    class="fb-xfbml-parse-ignore"><a
+                                        href="https://www.facebook.com/Mango-Sz%C3%A9ps%C3%A9gszalon-314413545238238/">Mango
+                                        Szépségszalon</a></blockquote>
                             </div>
                         </ul>
                     </div>
@@ -241,7 +244,8 @@
                     <div class="col-lg-6 col-md-6 col-sm-6">
                         <div class="footer__copyright__text">
                             <p>Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved</p>
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved
+                            </p>
                         </div>
                     </div>
                 </div>
